# cli-template

./: .gitignore  README.md  pyproject.toml
cli/: __main__.py
cli/commands/cmd1/: __init__.py  subcmd1.py
cli/commands/cmd2/: __init__.py
cli/commands/cmd3/: __init__.py
